# SA-CMS-PRO

./: .gitignore  LICENSE  PROGRESS.md  README.md  SUMMARY.md  TASKS.md  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  server.js  server.test.js  tsconfig.json
app/: __init__.py  chunking.py  database.py  db.py  fts.py  jobs.py  main.py  models.py  parsing.py  schemas.py  training.py
backend/: .env.sample  README.md  SA-CMS-Pro.iss  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202409210001_create_users.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/routes/: estimate.py  health.py  indices.py  orchestrator.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: auth.py  compliance.py  estimate.py  finance.py  history.py  ingest.py  orchestrator.py  pm.py  safety.py  search.py
backend/app/schemas/: __init__.py  common.py  orchestrator.py  user.py
backend/app/services/: chunking.py  embedding.py  fts.py  indices.py  jobs.py  learn.py  ocr.py  parsing.py  pricing.py  reporter.py  rsmeans_import.py
backend/app/utils/: __init__.py  logging.py  security.py
backend/install/: build_exe.ps1
backend/scripts/: dev.py
backend/tests/: test_api.py  test_services.py
config/: config.yaml
desktop/: README.md  electron-builder.yml  electron-main.ts  main.js  (+4 more)
(+122 files in other folders)
