[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sa-cms-pro"
version = "1.0.0"
description = "Minimal SA CMS Pro package"
authors = [{name = "Example"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["sa_cms_pro"]
